@@ -77,7 +77,6 @@ module Psych
     # end
 
     def test_key
-      skip 'only on ruby 2.0.0' if RUBY_VERSION < '2.0.0'
       @yamldbm['a'] = 'b'
       @yamldbm['c'] = 'd'
       assert_equal 'a', @yamldbm.key('b')
