@@ -1,3 +1,8 @@
+Tue Dec  8 01:57:13 2015  Aaron Patterson <tenderlove@ruby-lang.org>
+
+	* ext/psych/*: update psych to 2.0.16
+	* test/psych/*: ditto
+
 Mon Dec  7 23:45:20 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* string.c: introduce String#+@ and String#-@ to control
